Fix hero bg media query 1px gap

--- a/assets/scss/_about-us.scss
+++ b/assets/scss/_about-us.scss
@@ -1,13 +1,13 @@
 
 .about_hero {
-  background: $color--blue;
-  background-image: url(../img/tar-about-hero.svg); /* fallback */
-  background-image: url(../img/tar-about-hero.svg), radial-gradient(516.5px at 92.17% 47.6%,#133e9c 0%,#00091e 100%);
-  background-repeat: no-repeat;
-  background-position: right bottom;
-  background-size: contain;
-  @media screen and (max-width: $breakpoint-lg) {
-    background: radial-gradient(516.5px at 92.17% 47.6%,#133e9c 0%,#00091e 100%);
+  background: radial-gradient(516.5px at 92.17% 47.6%,#133e9c 0%,#00091e 100%);
+  @media screen and (min-width: $breakpoint-lg) {
+    background: $color--blue;
+    background-image: url(../img/tar-about-hero.svg); /* fallback */
+    background-image: url(../img/tar-about-hero.svg), radial-gradient(516.5px at 92.17% 47.6%,#133e9c 0%,#00091e 100%);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    background-size: contain;
   }
 }
 .about_hero_bg {
